# Patchifico

./: CMakeLists.txt  readme.md
dep/: raygui.h
dep/raylib/include/: raylib.h
src/: CMakeLists.txt  gui_components.h  ma_interface.cpp  ma_interface.h  main.cpp  modules.h  visual_config.h
